# chorrosion

./: .gitattributes  .gitignore  .markdownlintignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  EXTERNAL_DEPENDENCIES.md  LICENSE  LINUX_CHROMAPRINT_SETUP.md  MACOS_CHROMAPRINT_SETUP.md  PERFORMANCE_BASELINE.md  README.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  WINDOWS_CHROMAPRINT_SETUP.md  deny.toml  pyproject.toml  setup-unix.sh  setup-windows.ps1  test-with-mock-server.ps1  test-with-mock-server.sh  tmp.cmd
.cargo/: config.toml
.config/: .yamllint  cspell.json
.github/: CODE_OF_CONDUCT.md  MIGRATION_STRATEGY.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  private_report.md
.github/workflows/: ci-mock-server.yml  ci.yml  coverage.yml  frontend-ci.yml  performance-baseline.yml  release.yml  security.yml  smoke.yml
crates/chorrosion-api/: Cargo.toml
crates/chorrosion-api/benches/: api_workflow_benchmarks.rs
crates/chorrosion-api/src/: lib.rs
crates/chorrosion-api/src/handlers/: activity.rs  albums.rs  appearance.rs  artists.rs  auth.rs  calendar.rs  download_clients.rs  duplicates.rs  events.rs  imports.rs  indexers.rs  metadata_profiles.rs  mod.rs  quality_profiles.rs  search.rs  smart_playlists.rs  system.rs  tags.rs  tracks.rs  wanted.rs
crates/chorrosion-api/src/middleware/: auth.rs  metrics.rs  mod.rs  response_cache.rs  tracing.rs
crates/chorrosion-api/tests/: full_workflow_tests.rs
crates/chorrosion-application/: Cargo.toml
crates/chorrosion-application/src/: appearance.rs  community_indexers.rs  download_clients.rs  embedded_tags.rs  events.rs  file_organization.rs  file_replacement.rs  filename_heuristics.rs  http_client.rs  import.rs  import_matching.rs  indexers.rs  lib.rs  lists.rs  matching.rs  matching_precedence.rs  matching_precedence_tests.rs  notifications.rs  permission.rs  plugins.rs  quality_upgrade.rs  release_parsing.rs  release_restrictions.rs  scan_cache.rs  script_hooks.rs  search_automation.rs  tag_embedding.rs  tag_sanitation.rs  test_fixtures.rs
crates/chorrosion-cli/: Cargo.toml
crates/chorrosion-cli/src/: main.rs
crates/chorrosion-config/: Cargo.toml
crates/chorrosion-config/src/: lib.rs
crates/chorrosion-domain/: Cargo.toml
crates/chorrosion-domain/src/: lib.rs
crates/chorrosion-fingerprint/: Cargo.toml
crates/chorrosion-fingerprint/src/: acoustid.rs  error.rs  ffmpeg_decoder.rs  fingerprint.rs  generator.rs  lib.rs
crates/chorrosion-infrastructure/: Cargo.toml
crates/chorrosion-infrastructure/src/: backup_restore.rs  cache.rs  lib.rs  postgres_adapters.rs  profiler.rs  repositories.rs  sqlite_adapters.rs  sqlite_to_postgres.rs  transaction.rs
crates/chorrosion-infrastructure/tests/: database_integration_tests.rs
crates/chorrosion-metadata/: Cargo.toml
crates/chorrosion-metadata/src/: cover_art_fallback.rs  discogs.rs  fanarttv.rs  http_retry.rs  lastfm.rs  lib.rs  lyrics.rs
crates/chorrosion-metadata/tests/: README.md  cover_art_fallback_tests.rs  discogs_tests.rs  fanarttv_tests.rs  http_retry_tests.rs  lastfm_tests.rs  lastfm_wiremock_tests.rs  lyrics_tests.rs  test_helpers.rs
crates/chorrosion-musicbrainz/: Cargo.toml
crates/chorrosion-musicbrainz/src/: client.rs  client_tests.rs  error.rs  lib.rs  models.rs  rate_limiter.rs
crates/chorrosion-realtime/: Cargo.toml
crates/chorrosion-realtime/src/: lib.rs
crates/chorrosion-scheduler/: Cargo.toml
crates/chorrosion-scheduler/src/: job.rs  jobs.rs  lib.rs  registry.rs
crates/lidarr-api/: Cargo.toml
crates/lidarr-api/src/: lib.rs
crates/lidarr-api/src/handlers/: artists.rs
crates/lidarr-api/src/middleware/: auth.rs
crates/lidarr-application/: Cargo.toml
crates/lidarr-application/src/: lib.rs
crates/lidarr-cli/: Cargo.toml
crates/lidarr-cli/src/: main.rs
crates/lidarr-config/: Cargo.toml
crates/lidarr-config/src/: lib.rs
crates/lidarr-domain/: Cargo.toml
crates/lidarr-domain/src/: lib.rs
crates/lidarr-infrastructure/: Cargo.toml
crates/lidarr-infrastructure/src/: lib.rs  repositories.rs  sqlite_adapters.rs
crates/lidarr-realtime/: Cargo.toml
crates/lidarr-realtime/src/: lib.rs
crates/lidarr-scheduler/: Cargo.toml
crates/lidarr-scheduler/src/: job.rs  jobs.rs  lib.rs
migrations/: 20260106000000_initial_schema.sql  20260109000000_add_fingerprint_and_recording_storage.sql  20260113000000_add_musicbrainz_metadata.sql  20260113000001_add_genre_and_style_mapping.sql  20260114000000_add_indexer_definitions.sql  20260114000001_add_download_client_definitions.sql  20260318000000_add_nocase_indexes.sql  20260318000001_add_query_optimization_indexes.sql  20260320000000_add_database_constraints.sql  20260409000000_add_quality_to_track_files.sql  20260421000000_add_tags_and_tagged_entities.sql  20260422000000_add_smart_playlists.sql  20260423000000_add_track_files_hash_index.sql
migrations/postgres/: 20260106000000_initial_schema.sql  20260109000000_add_fingerprint_and_recording_storage.sql  20260113000000_add_musicbrainz_metadata.sql  20260113000001_add_genre_and_style_mapping.sql  20260113000002_add_artist_relationships.sql  20260114000000_add_indexer_definitions.sql  20260114000001_add_download_client_definitions.sql  20260318000000_add_nocase_indexes.sql  20260318000001_add_query_optimization_indexes.sql  20260320000000_add_database_constraints.sql  20260409000000_add_quality_to_track_files.sql
scripts/: perf-baseline.ps1  perf-baseline.sh
tmp/: pr-385-body.md  pr-body-postgres-full-adapters.md
web/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/e2e/: auth.spec.ts  dashboard.spec.ts  helpers.ts  navigation.spec.ts  settings-crud.spec.ts  settings-fixtures.ts
web/src/: app.css
web/src/lib/: api.client.test.ts  api.test.ts  api.ts  auth.test.ts  auth.ts  dashboard.test.ts  dashboard.ts  settingsValidation.test.ts  settingsValidation.ts  types.ts
web/src/lib/stores/: unsavedGuard.test.ts  (+1 more)
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+22 files in other folders)
