[workspace]
members = [
    "crates/chorrosion-config",
    "crates/chorrosion-domain",
    "crates/chorrosion-application",
    "crates/chorrosion-infrastructure",
    "crates/chorrosion-realtime",
    "crates/chorrosion-scheduler",
    "crates/chorrosion-api",
    "crates/chorrosion-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
axum = { version = "0.7", default-features = false, features = ["macros", "json", "tokio", "query"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["env", "toml"] }
utoipa = "4"
utoipa-swagger-ui = { version = "6", features = ["axum"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "migrate", "chrono", "uuid", "postgres", "sqlite"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
async-trait = "0.1"
