[project]
name = "chorrosion-python"
version = "0.1.0"
description = "Python components for Chorrosion project"
authors = [
    {name = "Runyan, JD",email = "jason@runyan.net"}
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
