[package]
name = "chorrosion-application"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chorrosion-config = { path = "../chorrosion-config" }
chorrosion-domain = { path = "../chorrosion-domain" }
chorrosion-fingerprint = { path = "../chorrosion-fingerprint" }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = "1"
lazy_static = "1.4"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
