[package]
name = "chorrosion-application"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chorrosion-config = { path = "../chorrosion-config" }
chorrosion-domain = { path = "../chorrosion-domain" }
chorrosion-fingerprint = { path = "../chorrosion-fingerprint" }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
regex = "1"
lazy_static = "1.4"
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros"] }
wiremock = "0.6"
