[package]
name = "chorrosion-fingerprint"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["sync", "time"] }
tracing = "0.1"
url = "2.5"
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
