[package]
name = "chorrosion-fingerprint"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["sync", "time"] }
tracing = "0.1"
url = "2.5"
uuid = { version = "1.11", features = ["serde", "v4"] }
chromaprint = { version = "0.2", features = ["pkg-config"] }
symphonia = { version = "0.5", default-features = false, features = ["flac", "mp3", "pcm"] }

# NOTE: Audio fingerprinting dependencies (rusty-chromaprint, metaflac, symphonia)
# are Phase 2 features but included now to avoid breaking existing code structure.
# They will be actively used once FLAC/MP3 decoding is implemented in Phase 2.
# For now, placeholder implementations use these libraries for format validation.

[dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
