[package]
name = "chorrosion-scheduler"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
chorrosion-config = { path = "../chorrosion-config" }
chorrosion-metadata = { path = "../chorrosion-metadata" }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
uuid = { workspace = true }
