[package]
name = "chorrosion-scheduler"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
postgres = ["sqlx/postgres", "chorrosion-infrastructure/postgres"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
chorrosion-config = { path = "../chorrosion-config" }
chorrosion-application = { path = "../chorrosion-application" }
chorrosion-infrastructure = { path = "../chorrosion-infrastructure" }
chorrosion-metadata = { path = "../chorrosion-metadata" }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
uuid = { workspace = true }
