[package]
name = "lidarr-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
lidarr-application = { path = "../lidarr-application" }
lidarr-domain = { path = "../lidarr-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
